[project]
name = "greenwave"
version = "2.3.0"
description = "Decision-making service for gating in a software delivery pipeline"
authors = [
    {name = "Red Hat, Inc. and others"}
]
license = {text = "GPL-2.0-or-later"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
keywords = ["gating", "decision", "software-delivery"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "PyYAML>=6.0,<7.0",
    "dogpile.cache>=1.3.3,<2.0",
    "flask>=3.0.3,<4.0",
    "gunicorn>=25,<25.1",
    "requests>=2.32.4,<3.0",
    "python-dateutil>=2.8.2,<3.0",
    "fedora-messaging>=3.4.1,<4.0",
    "stomp.py>=8.1.2,<9.0",
    "statsd>=4.0.1,<5.0",
    "pymemcache>=4.0.0,<5.0",
    "defusedxml>=0.7.1,<1.0",
    "opentelemetry-sdk>=1.24.0,<2.0",
    "opentelemetry-instrumentation-flask>=0.45b0",
    "opentelemetry-instrumentation-requests>=0.45b0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0,<2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9,<9.1",
    "pytest-cov>=7,<7.1",
    "mock>=5.1.0,<6.0",
    "requests-mock>=1.11.0,<2.0",
]
functional-test = [
    "SQLAlchemy>=2.0.35,<3.0",
    "psycopg2-binary>=2.9.9,<3.0",
]
docs = [
    "sphinx>=9.1,<9.2",
    "sphinxcontrib-httpdomain>=2,<2.1",
]

[project.urls]
Homepage = "https://gating-greenwave.readthedocs.io/"
Repository = "https://github.com/release-engineering/greenwave"
Documentation = "https://gating-greenwave.readthedocs.io/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "greenwave/",
    "conf/",
    "docs/",
    "COPYING",
    "README.md",
    "pytest.ini",
    "run-dev-server.py",
    "tox.ini",
]
